src/main/java/com/example/updatemebook/errors/VerificationPassword.java
package com.example.updatemebook.errors;

public class VerificationPassword extends RuntimeException {
    public VerificationPassword(String exc){
        super(exc);
    }}
